<resources>
    <string name="app_name">属具之家</string>
    <string name="today_news">今日头条</string>
    <string name="today_recommend">每日推荐</string>
    <string name="more_tool">多功能属具</string>
    <string name="market">供求市场</string>
    <string name="setting">设置</string>
    <string name="second_hand">二手市场</string>
    <string name="mouth">口碑</string>
    <string name="build">施工案例</string>
    <string name="search">搜索</string>
    <string name="edit_search">       输入关键词搜索</string>
    <string name="shop">品牌店</string>
    <string name="collection">收藏夹</string>
    <string name="collect">收藏</string>
    <string name="message">消息</string>
    <string name="footprint">足迹</string>
    <string name="order">我的订单</string>
    <string name="supply_manage">供求管理</string>
    <string name="second_manage">二手管理</string>
    <string name="mouth_manage">口碑管理</string>
    <string name="offer">我的出价</string>
    <string name="group">我的团购</string>
    <string name="inquiry">我的询价</string>
    <string name="attestation">认证管理</string>
    <string name="help">帮助与反馈</string>
    <string name="update">检测更新</string>
    <string name="brand">品牌</string>
    <string name="kit">配套件</string>
    <string name="host">主机</string>
    <string name="host_brand">热门品牌</string>
    <string name="address_tips_location_fail">定位失败,请检查是否已打开网络或GPS功能</string>
    <string name="app_loading_more">上拉加载更多</string>
    <string name="app_home_gy">供应</string>
    <string name="app_home_qg">求购</string>
    <string name="app_near_location">查看位置</string>
    <string name="app_near_phone">拨打电话</string>
    <string name="app_near_wechat">微信联系</string>
    <string name="app_near_enter">进店</string>
    <string name="app_near_water">一键服务</string>
    <string name="app_near_city">烟台</string>
    <string name="app_near_sell">经销商</string>
    <string name="app_water">服务站</string>
    <string name="app_near_people">人气</string>
    <string name="app_near_distance">距离</string>
    <string name="app_near_province">本省</string>
    <string name="app_near_nice">服务最优</string>
    <string name="app_brand_zdcp">主打产品</string>
    <string name="app_brand_dczq">大锤专区</string>
    <string name="app_brand_xczq">小锤专区</string>
    <string name="app_brand_more">更多 ></string>
    <string name="app_water_more_brand">更多口碑 ></string>
    <string name="app_near_title">烟台艾迪精密机械股份有限公司</string>
    <string name="app_near_content">主营：液压破碎锤、快速连接器、拔桩机、大锤、小锤</string>
    <string name="app_item_content">马鞍山云林白城—专业、专心、专注生产研发液压锤精品活塞精品活塞精品活塞</string>
    <!--服务站详情-->
    <string name="app_water_people">服务车辆</string>
    <string name="app_water_car">服务人员</string>
    <string name="app_water_time">从业年限</string>
    <string name="app_tool_make">属具安装</string>
    <string name="app_tool_text">安装服务，一步到位</string>
    <string name="app_tool_service">属具维修</string>
    <string name="app_tool_service_text">品质维修，后顾无忧</string>
    <string name="app_hot_brand">精选口碑</string>
    <string name="app_hot_people">特刊人物</string>
    <string name="app_read">阅读</string>
    <string name="app_time">2017.1.7</string>
    <string name="test_custom_header_title">我是标题标我是标题标我是标题标我是标题标我是标题标我是标题标</string>
    <string name="test_custom_header_desc">我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述</string>
    <string name="app_dgnsj_item">您可能感兴趣的店铺</string>
    <!--品牌店详情-->
    <string name="app_brand_show">产品展示</string>
    <string name="app_brand_second">二手交易</string>
    <string name="app_brand_gq">供求圈</string>
    <string name="app_brand_qyjj">企业简介</string>
    <string name="app_brand_qydt">企业动态</string>
    <string name="app_brand_xswl">销售网络</string>
    <string name="app_brand_sqtg">申请团购</string>
    <string name="app_brand_xdj">询底价</string>
    <string name="app_brand_sbzs">设备展示</string>
    <string name="app_brand_jggy">加工工艺</string>
    <string name="app_brand_schj">生产环境</string>
    <string name="app_brand_dpkb">店铺口碑</string>
    <string name="app_brand_cpkb">产品口碑</string>
    <string name="app_brand_all">全部</string>
    <string name="app_brand_lxdz">联系地址：</string>
    <string name="app_brand_scl">生产量：</string>
    <string name="app_brand_scsb">生产设备：</string>
    <string name="app_brand_zjgy">质检工艺：</string>
    <string name="app_brand_tgxx">团购信息</string>
    <string name="app_brand_gsmc">公司名称 </string>
    <string name="app_brand_cplx">产品类型</string>
    <string name="app_brand_cpxh">产品型号</string>
    <string name="app_brand_tgsl">团购数量</string>
    <string name="app_brand_qwjg">期望价格</string>
    <string name="app_brand_qwsj">期望到货时间</string>
    <string name="app_brand_grxx">个人信息</string>
    <string name="app_brand_name">姓名</string>
    <string name="app_brand_xlfs">联系方式</string>
    <string name="app_brand_sr_cpxh">请输入产品型号</string>
    <string name="app_brand_sr_tgsl">请输入团购数量</string>
    <string name="app_brand_sr_je">请输入金额</string>
    <string name="app_brand_xz">请选择</string>
    <string name="app_brand_sr_gsmc">请输入公司名称</string>
    <string name="app_brand_sr_xm">请输入您的姓名</string>
    <string name="app_brand_sr_dh">请输入您的电话</string>
    <string name="app_brand_xxdz">详细地址</string>
    <string name="app_brand_dq">地区</string>
    <string name="app_brand_tjsq">提交申请</string>
    <!--经销商产品详情-->
    <string name="app_sell_yxgg">已选规格：</string>
    <string name="app_sell_canshu">参数</string>
    <string name="app_sell_cpxq">产品详情</string>
    <string name="app_sell_xgtj">相关推荐</string>
    <string name="app_sell_zxpl">最新评论</string>
    <string name="app_sell_add_gwc">加入购物车</string>
    <string name="app_sell_buy">立即购买</string>
    <!--对话框-->
    <string name="dialog_qx">取消</string>
    <string name="dialog_copy">复制</string>
    <string name="dialog_wx">微信号</string>
    <string name="dialog_qd">确定</string>

    <!--搜索-->
    <string name="search_all">综合</string>
    <string name="search_cp">产品</string>
    <string name="search_gq">供求</string>
    <string name="search_dp">店铺</string>
    <string name="search_es">二手</string>
    <string name="search_sp">视频</string>
    <string name="search_wz">文章</string>



    <!--修云飞  以下-->
    <string name="content_title">清早起床，今天天气好，路边的野花不要采，好好学习，天天向上</string>
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_two"></item>
    <!--修云飞  以上-->

</resources>
