<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="265dp"
    android:layout_height="165dp"
    android:layout_gravity="center"
    android:background="@color/font_color_white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="center"
        android:text="@string/app_near_phone"
        android:textColor="@color/color_xl"
        android:textSize="@dimen/font_size_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/color_da"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/font_size_xxlarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_qx"
            android:textColor="@color/color_xl"
            android:textSize="@dimen/font_size_xxlarge" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="40dip"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:background="@color/color_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_qd"
            android:textColor="@color/color_bar1"
            android:textSize="@dimen/font_size_xxlarge" />
    </LinearLayout>

</LinearLayout>