<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/iv_today_news"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/home8" />

    <TextView
        android:id="@+id/tv_today_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tag"
        android:lines="1"
        android:text="@string/app_item_content"
        android:textColor="@color/color_xxl"
        android:textSize="@dimen/font_size_large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20">

        <TextView

            android:id="@+id/news_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_read"
            android:textColor="@color/color_xl"
            android:textSize="@dimen/margin_small" />

        <TextView
            android:id="@+id/iv_today_news_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin_smallest"
            android:text="@string/app_time"
            android:textColor="@color/color_xl"
            android:textSize="@dimen/margin_small" />
    </RelativeLayout>
    <include layout="@layout/xl_line"/>
</LinearLayout>